--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.example.dracovirtualcontroller"
-        minSdk 21
+        applicationId "com.razer.dracovirtualcontroller"
+        minSdk 29
         targetSdk 30
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,11 @@ android {
     buildFeatures {
         viewBinding true
     }
+    task appStart(type: Exec, dependsOn: 'installDebug') {
+        // windows
+        commandLine 'cmd', '/c', 'adb', 'shell', 'am', 'start', '-n', 'com.razer.dracovirtualcontroller/.MainActivity'
+    }
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
